# ChangeLog for dev-tcltk/itcl
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-tcltk/itcl/ChangeLog,v 1.35 2006/09/22 07:20:55 matsuu Exp $

  22 Sep 2006; MATSUU Takuto <matsuu@gentoo.org>
  -files/itcl-3.2.1-gentoo.diff, -files/itcl-3.2-r2-gentoo.diff,
  -itcl-3.2-r2.ebuild, -itcl-3.2.1-r1.ebuild, -itcl-3.3.ebuild:
  Removed old versions

  16 Sep 2006; Michael Sterrett <mr_bones_@gentoo.org> itcl-3.2.1-r1.ebuild:
  drop alpha keywords to avoid broken deps

  24 May 2006; Michael Hanselmann <hansmi@gentoo.org> itcl-3.3-r1.ebuild:
  Stable on ppc.

  19 May 2006; Thomas Cort <tcort@gentoo.org> itcl-3.3-r1.ebuild:
  Stable on alpha and amd64 wrt Bug #116342.

  17 May 2006; Joshua Jackson <tsunam@gentoo.org> itcl-3.3-r1.ebuild:
  stable on x86; bug #116342

  02 May 2006; Gustavo Zacarias <gustavoz@gentoo.org> itcl-3.3-r1.ebuild:
  Stable on sparc

  10 Mar 2006; Aron Griffis <agriffis@gentoo.org> itcl-3.3-r1.ebuild:
  Mark 3.3-r1 stable on ia64

  16 Jan 2006; Jason Wever <weeve@gentoo.org> itcl-3.3.ebuild:
  Stable on SPARC.

*itcl-3.3-r1 (09 Jan 2006)

  09 Jan 2006; MATSUU Takuto <matsuu@gentoo.org> +itcl-3.3-r1.ebuild:
  Fixed fails with bash-3.1, Bug 116342.

  29 Dec 2005; Simon Stelling <blubb@gentoo.org> itcl-3.3.ebuild:
  stable on amd64

  24 Dec 2005; Michael Hanselmann <hansmi@gentoo.org> itcl-3.3.ebuild:
  Stable on ppc.

  16 Dec 2005; Mark Loeser <halcy0n@gentoo.org> itcl-3.3.ebuild:
  Stable on x86; bug #115177

*itcl-3.3 (03 Jul 2005)

  03 Jul 2005; MATSUU Takuto <matsuu@gentoo.org> +itcl-3.3.ebuild:
  Version bumped. Bug 93307.

  21 Apr 2005; Michael Hanselmann <hansmi@gentoo.org> itcl-3.2.1-r1.ebuild:
  Stable on ppc.

  31 Dec 2004; Ciaran McCreesh <ciaranm@gentoo.org> :
  Change encoding to UTF-8 for GLEP 31 compliance

  19 Oct 2004; Dylan Carlson <absinthe@gentoo.org> itcl-3.2.1-r1.ebuild:
  Stable on amd64.
